--- a/tutorial2.html
+++ b/tutorial2.html
@@ -104,7 +104,8 @@
 		if (!statistic) {
 			statistic = 'mean';
 		}
-		plotExample(statistic, VisType.VIS_AREA, true);
+		REFRESH_RATE = 1600;
+		plotExample(statistic, null, true);
 
 		console.log('statistic ' + statistic);
 
