audio feedback per trial

--- a/tutorial3.html
+++ b/tutorial3.html
@@ -78,7 +78,7 @@
 
 			<p>You will make your selection by clicking on the chart
 				<!--on either chart, or by pressing the &ShortLeftArrow;</span> , <span class="larger">&ShortRightArrow;</span> arrows on your keyboard.-->
-				You will then press ENTER to confirm selection.
+				You will then press <b>ENTER on keyboard</b> to confirm selection.
 
 			<p>We will now go through a few practice rounds. You will receive feedback on how you guessed during practice.
 
