--- a/tutorial_last.html
+++ b/tutorial_last.html
@@ -74,7 +74,7 @@
 
 			<p>Great! Hopefully you got the hang of it.
 			<p>&nbsp;
-			<p>We will now begin the actual trials. You will be given only audio feedback now on. As in the practice, the colors will change from time to time.
+			<p>We will now begin the actual trials. You will be given only audio feedback now on. As in the practice, the charts will change from time to time.
 
 			<p>&nbsp;
 			<p> This next part will take you about 15 minutes. There will be breaks in between to allow you to rest. Please try to answer to the best of your ability.
