--- a/experiment.html
+++ b/experiment.html
@@ -374,10 +374,10 @@
                 text = "Select the chart with the higher average value";
                 break;
             case 'std':
-                text = "Select the chart with the higher average value";
+                text = "Select the chart with the higher variation";
                 break;
             case 'slope':
-                text = "SSelect the chart with the more pronounced increasing trend";
+                text = "Select the chart with the stronger increasing trend";
                 break;
             }
             d3.select("#prompt").text(text);
