more accurate fixation time; bug fixes

--- a/tutorial1.html
+++ b/tutorial1.html
@@ -102,7 +102,7 @@
 		if (!statistic) {
 			statistic = 'mean';
 		}
-		var seq = urlParams.get('statistic');
+		var seq = urlParams.get('seq');
 		plotExample(statistic, VisType.VIS_BARS, false);
 
 
