--- a/experiment.html
+++ b/experiment.html
@@ -244,12 +244,19 @@
         var ENGAGEMENT_PER_BLOCK = 2;
         var BREAK_INTERVAL = 2;
 
-        // practice mode?s
+        // practice
         TRAINING = urlParams.get('training');
         if (TRAINING && TRAINING.trim() == '1') {
             ENGAGEMENT_PER_BLOCK=0;
             BREAK_INTERVAL=0;
             blockConfigs = trainingConfigs
+        }
+
+        // trial count (tCount modifier, for testing)
+        var tCount = urlParams.get('tCount');
+        if (tCount) {
+            tCount = parseInt(tCount);
+            console.log('tCount: ' + tCount);
         }
 
         var TEST = urlParams.get('test');
@@ -259,6 +266,9 @@
             blockConfigs[i].engagementCount=ENGAGEMENT_PER_BLOCK || 0;
             if (STATISTIC) {
                 blockConfigs[i].mode = STATISTIC;
+            }
+            if (tCount) {
+                blockConfigs[i].trialCount=tCount;
             }
             /*
             if (TEST) {
