break message removes by enter

--- a/experiment.html
+++ b/experiment.html
@@ -132,7 +132,7 @@
     <!-- Break Modal -->
     <div id="breakModal">
         <div id="breakContent">
-            <h3>Feel free to rest your eyes</h3>
+            <h3>Feel free to rest your eyes for a moment</h3>
             <p id="breakMessage"></p>
             <p>
             <p><span id="percentComplete"></span><br>
@@ -140,7 +140,9 @@
                     <rect id="rectComplete" x="0" y="0" width="0" height="20" fill="#72a7fc"></rect>
                     <rect id="rectRemaining" x="0" y="0" width="200" height="20" fill="#dddddd"></rect>
             </svg>
-            <p><button id="continueButton">Continue</button>
+            <p>&nbsp;
+            <p>Press ENTER when you're ready to continue</p>
+            <!--<p><button id="continueButton">Continue</button>-->
         </div>
     </div>
 
